--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 [tool.poetry.dependencies]
 matplotlib = ">=3.7.1"
 python = ">=3.10,<4.0"
-numpy = "<2.0"
+numpy = ">=1.26.4"
 xarray = ">=2023.7.0"
 rasterio = ">=1.3.10"
 pandas = ">=2.0.3"
